Mon Nov 11 09:17:34 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.3 released.

Fri Nov  8 17:09:50 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS:
          Added Mike McKnerney to the list

Fri Nov  8 12:35:10 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>

        * NEWS:
          Added changes test framework and improvements for Android port

Wed Nov  6 12:29:45 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Moved rel2abs from exe in commandline()

Fri Nov  1 14:11:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_clang.GNU:
          Added support for c++11

Fri Nov  1 13:17:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_for_tao.mpc:
          Added new obstack

Thu Oct 31 10:34:54 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ace/Obstack.cpp:
        * ace/Obstack_T.cpp:
        * ace/ace.mpc:
          Added Obstack.cpp for ACE_SINGLETON_TEMPLATE_INSTANTIATION.
          Remove ACE_SINGLETON_TEMPLATE_INSTANTIATION from Obstack_T.cpp

        * ace/config-android.h:
        * ace/config-macros.h:
          Rename ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION to
          ACE_HAS_EXPLICIT_TEMPLATE_CLASS_INSTANTIATION

        * bin/PerlACE/Process_Unix.pm:
          Removed rel2abs from Executable().

        * tests/Process_Manual_Event_Test.cpp:
          Resolved error when using absolute paths.

Tue Oct 29 22:22:18 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/fuzz.pl:

          Modify the test for log macro signature to relax for TAOLIB when it
          is under the interop-tests directory. As we slowly collect interop
          tests, it seems natural to have a "tao" directory and a separate
          non-tao directory to ensure artifacts aren't overwritten by non-tao
          idl compilers or other build tools.
