@@ -1,3 +1,9 @@
+ace (6.2.3-1) experimental; urgency=low
+
+  * New upstream release.
+
+ -- Johnny Willemsen <jwillemsen@remedy.nl>  Mon, 11 November 2013 19:01:01 +0200
+
 ace (6.2.2-1) experimental; urgency=low
 
   * New upstream release.
